--- a/wercker.yml
+++ b/wercker.yml
@@ -19,3 +19,10 @@ build:
         code: |
             mv build/libs/time-api-*.jar $WERCKER_OUTPUT_DIR/time-api.jar
             mv *.template $WERCKER_OUTPUT_DIR/
+            
+dev:
+  steps:
+    - script:
+      name: gradle bootRun
+      code: |
+        ./gradlew bootRun
